<resources>
    <string name="app_name">NotePad</string>

    <string name="file_name">NoteList.json</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="menu_save">menu_save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="datetime">DateTime</string>
    <string name="note_pad">Note Pad</string>
    <string name="_2020_mohammad_momeni">2020, Mohammad Momeni</string>
    <string name="version_1_0">Version 1.0</string>
</resources>